# EEG-emotional-state-classifier

./: .gitignore  EEG_Exploration.ipynb  EEG_Modelling.ipynb  Makefile  README.md  pyproject.toml  requirements.txt
config/: default.yaml
data/processed/: all_participants_features.csv  final_preprocessed_10.csv  final_preprocessed_20.csv
models/: label_encoder.joblib  scaler.joblib  scenario_model.pth
output/: README.md  winsorized_bandpower_features.csv
src/eeg_emotion/: __init__.py  api.py  cli.py  config.py  data_ingestion.py  features.py  inference.py  models.py  pipeline.py  preprocess.py
tests/: test_preprocess.py
